# dvrescue

./: .appveyor.yml  .gitattributes  .gitignore  .gitmodules  .lgtm.yml  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  History.txt  LICENSE  LICENSE.txt  README.md
Project/: version.txt
Project/CMake/: CMakeLists.txt  CPackConfig.cmake
Project/GNU/CLI/: AddThisToRoot_CLI_compile.sh  Makefile.am  configure.ac
Project/GNU/CLI/test/: captions.sh  captions.txt  framediscontinuity.sh  helpers.sh  simple.sh  webvtt.sh  xml.sh
Release/: Build_CLI_Windows.ps1  (+3 more)
Source/: CMakeLists.txt
Source/CLI/: CLI_Help.cpp  CLI_Help.h  CLI_Main.cpp  CommandLine_Parser.cpp  CommandLine_Parser.h  DVRescue.rc
Source/Common/: AvfCtl.h  AvfCtl.m  AvfCtlWrapper.h  AvfCtlWrapper.mm  Config.h  Core.cpp  Core.h  DecklinkWrapper.cpp  DecklinkWrapper.h  LinuxWrapper.cpp  LinuxWrapper.h  Merge.cpp  Merge.h  Output.cpp  Output.h  Output_Captions_Decode.cpp  Output_Captions_Decode.h  Output_Captions_Scc.cpp  Output_Captions_Scc.h  Output_Mkv.cpp  Output_Mkv.h  Output_Webvtt.cpp  Output_Webvtt.h  Output_Xml.cpp  Output_Xml.h  ProcessFile.cpp  ProcessFile.h  ProcessFileWrapper.cpp  ProcessFileWrapper.h  SignalStats.cpp  SignalStats.h  SimulatorWrapper.cpp  SimulatorWrapper.h  Sony9PinWrapper.cpp  Sony9PinWrapper.h  XmlOutput.cpp  XmlOutput.h
Source/GUI/dvrescue/: dvrescue.pro  ffmpeg.pri
Source/GUI/dvrescue/dvrescue/: AboutDialog.qml  AnalyseDataView.qml  AnalyseFileView.qml  AnalyseFileViewer.qml  AnalysePage.qml  AvfCtl.qml  AvfCtlParser.qml  CaptureFrameInfo.qml  CapturePage.qml  CaptureView.qml  CaptureView.ui.qml  CaptureViewControlButton.qml  ComboBoxEx.qml  CustomButton.qml  DataView.qml  DecklinkConfigPopup.qml  DefaultToolTip.qml  DevicesModel.qml  DevicesModelUpdater.qml  DevicesView.qml  DvLoupeCtl.qml  DvLoupeView.qml  DvPackagerCtl.qml  DvPlayCtl.qml  DvRescueCLI.qml  DvRescueLogo.ui.qml  DvRescueParser.qml  DvRescueReport.qml  FileView.qml  FileViewer.qml  FileViewer.ui.qml  FilesModel.qml  FunkyGridLayout.qml  HyperlinkDelegate.qml  IconDelegate.qml  JumpRepeatTextDelegate.qml  LCDLabel.qml  MarkersView.qml  MediaInfoModel.qml  MergeAnalyzeView.qml  (+110 more)
Source/GUI/dvrescue/dvrescue-QtAVPlayer-lib/src/QtAVPlayer/: QtAVPlayerLib.pro
Source/GUI/dvrescue/dvrescue.qmltests/: dvrescue.qmltests.pro  main.cpp  qml.qrc  setup.cpp  setup.h  target_wrapper.bat  testdata.qrc
Source/GUI/dvrescue/dvrescue.qmltests/testdata/: dvloupe.json  dvplay.data  many_attributes.dv.dvrescue.scc  many_attributes.dv.dvrescue.vtt  many_attributes.dv.dvrescue.xml
Source/GUI/dvrescue/dvrescue.qmltests/tests/: tst_about.qml  tst_captureframeinfo.qml  tst_captureview.qml  tst_deviceslist.qml  tst_dvloupeview.qml  tst_fileview.qml  tst_mergepage.qml  tst_navbar.qml  tst_parsing.qml  tst_popup.qml  tst_segment_table.qml  tst_settings.qml
Source/GUI/dvrescue/dvrescue.tests/: csvparsingtest.cpp  csvparsingtest.h  datamodeltest.cpp  datamodeltest.h  dummytest.cpp  dummytest.h  dvrescue.tests.pro  graphmodeltest.cpp  graphmodeltest.h  main.cpp  playertest.cpp  playertest.h  testdata.qrc  xmlparsingtest.cpp  xmlparsingtest.h
Source/GUI/dvrescue/dvrescue.tests/testdata/: sample.csv  sample.xml  sample2.csv
Source/GUI/dvrescue/dvrescue.tests/tests/: tst_parsing.qml
Source/GUI/dvrescue/dvrescue.tests/xml/: DVC02339 - 0_00_00_07.dv.xml
Source/GUI/dvrescue/dvrescue/icons/: icon.icns
Source/GUI/dvrescue/dvrescue/qt5/Dialogs/: FileDialog.qml  MessageDialog.qml  qmldir
Source/GUI/dvrescue/dvrescue/qt5/GraphicalEffects/: ColorOverlay.qml  DropShadow.qml  Glow.qml  qmldir
Source/GUI/dvrescue/dvrescue/qt5/Multimedia/: VideoOutput.qml  qmldir
Source/GUI/dvrescue/dvrescue/qt512/SplitView/: SplitView.qml  qmldir
Source/GUI/dvrescue/dvrescue/qt513+/SplitView/: SplitView.qml
Source/GUI/dvrescue/dvrescue/qt6/Dialogs/: FileDialog.qml  MessageDialog.qml
Source/GUI/dvrescue/dvrescue/qt6/GraphicalEffects/: ColorOverlay.qml  DropShadow.qml  Glow.qml
Source/GUI/dvrescue/dvrescue/qt6/Multimedia/: VideoOutput.qml
Source/GUI/dvrescue/dvrescue/windows-tools/: .gitignore
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/: DIR_COLORS  bash.bash_logout  bash.bashrc  fstab  hosts  man_db.conf  nanorc  networks  nsswitch.conf  profile  protocols  rebase.db.x86_64  services
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/colorgcc/: colorgccrc
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/crypto-policies/: config
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/crypto-policies/back-ends/: bind.config  gnutls.config  java.config  krb5.config  libreswan.config  nss.config  openssh.config  opensshserver.config  openssl.config  opensslcnf.config
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/defaults/: Cygwin.bat
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/pki/tls/: cert.pem  openssl.cnf
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/postinstall/: 000-cygwin-post-install.sh.done  0p_000_autorebase.dash  0p_update-info-dir.dash  base-files-mketc.sh.done  base-files-profile.sh.done  bash.sh.done  colorgcc.sh.done  crypto-policies.sh.done  man-db.dash.done  nano.sh.done  openssl.sh.done  p11-kit.sh.done  zp_man-db-update-index.dash
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/preremove/: _autorebase.sh  base-files-manifest.lst  base-files.sh  crypto-policies.sh  nano.sh  openssl.sh.done  p11-kit.sh.done
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/profile.d/: lang.csh  lang.sh  tzset.csh  tzset.sh
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/setup/: installed.db  timestamp
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/skel/: .bashrc  .inputrc
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/etc/ssl/: certs
Source/GUI/dvrescue/dvrescue/windows-tools/cygwin/tmp/: dvpackager.QiKnoE.ffmetadata  dvpackager.bZNAjT.ffmetadata  dvpackager.jNOqxI.ffmetadata
Source/GUI/dvrescue/dvrescue/windows-tools/scripts/: dvrescue.sh  ffmpeg.sh  mediainfo.sh  xml.sh
Source/Install/: cygwin.nsh  dvrescue.nsi  qt.nsh  vcruntime.nsh
debian/: control  (+5 more)
(+141 files in other folders)
